Fix hero content background positioning by adding right property for better alignment

--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -68,7 +68,7 @@ main {
 .hero .hero__content-background {
   position: absolute;
   top: 0;
-
+  right: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
